--- a/pazzfit/pazzfit.vcxproj
+++ b/pazzfit/pazzfit.vcxproj
@@ -277,6 +277,5 @@
     <Font Include="Example\YomogiFont.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
