ピースの回転（90,180,270）＆アルゴリズムクラスの追加

--- a/pazzfit/pazzfit.vcxproj
+++ b/pazzfit/pazzfit.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Algorithm.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Piece.cpp" />
@@ -279,6 +280,7 @@
     <Font Include="Example\YomogiFont.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Algorithm.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="Piece.h" />
