評価点の作成&評価点に基づき枠の更新&処理の流れ

--- a/pazzfit/pazzfit.vcxproj
+++ b/pazzfit/pazzfit.vcxproj
@@ -183,6 +183,7 @@
     <Image Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="Engine\Assets\engine_textures.s3a" />
     <None Include="Engine\Config.ini" />
     <None Include="Engine\dll(x64)\D3D\d3dcompiler_47.dll" />
