--- a/pazzfit/pazzfit.vcxproj.filters
+++ b/pazzfit/pazzfit.vcxproj.filters
@@ -333,6 +333,7 @@
     <None Include="Example\Well\Well.wavefrontobj">
       <Filter>リソース ファイル\Example\Well</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Engine\dll(x64)\libmpg123\COPYING.txt">
