--- a/.gitignore
+++ b/.gitignore
@@ -256,9 +256,7 @@ paket-files/
 .cr/
 
 # Python Tools for Visual Studio (PTVS)
-__pycache__/
-<<<<<<< HEAD
-*.pyc
+__pycache__/*.pyc
 
 # test images
 *.bmp
@@ -266,4 +264,3 @@ __pycache__/
 *.pyc
 
 *.html
->>>>>>> e591ed285ce1da17b2e3df898fe8ee9e72cf6082
